--- a/kingsvalley1-android/bin/AndroidManifest.xml
+++ b/kingsvalley1-android/bin/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="17" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_explorer"
         android:label="@string/app_name" >
         <activity
             android:name=".MainActivity"
